--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <h1>Access Error</h1>
 <p>You cant access it here! add /eaglercraft.1.8.8.html to the URL or</p>
 <a href="https://eaglercraft1-8-8-web.vercel.app/eaglercraft.1.8.8.html">click here.</a>
+<p>you can only play multiplayer <a href="https://eaglercraft1-8-8-web.vercel.app/readme.html">learn more</a>.</p>
